headers/sound/orxSound.h



/** Sound status enum
 */
typedef enum __orxSOUND_STATUS_t
{
  orxSOUND_STATUS_PLAY = 0,
  orxSOUND_STATUS_PAUSE,
  orxSOUND_STATUS_STOP,

  orxSOUND_STATUS_NUMBER,

  orxSOUND_STATUS_NONE = orxENUM_NONE

} orxSOUND_STATUS;
typedef struct __orxSOUND_t        orxSOUND;


/** Is sound looping?
 * @param[in] _pstSound       Concerned Sound
 * @return orxTRUE / orxFALSE
 */
extern orxDLLAPI orxBOOL orxFASTCALL          orxSound_IsLooping(const orxSOUND *_pstSound);



/** Gets sound duration
 * @param[in] _pstSound       Concerned Sound
 * @return orxFLOAT
 */
extern orxDLLAPI orxFLOAT orxFASTCALL         orxSound_GetDuration(const orxSOUND *_pstSound);


/** Gets sound status
 * @param[in] _pstSound       Concerned Sound
 * @return orxSOUND_STATUS
 */
extern orxDLLAPI orxSOUND_STATUS orxFASTCALL  orxSound_GetStatus(const orxSOUND *_pstSound);


/** Gets sound config name
 * @param[in]   _pstSound     Concerned sound
 * @return      orxSTRING / orxSTRING_EMPTY
 */
extern orxDLLAPI const orxSTRING orxFASTCALL  orxSound_GetName(const orxSOUND *_pstSound);


/** Gets master bus ID
 * @return      Master bus ID
 */
extern orxDLLAPI orxSTRINGID orxFASTCALL      orxSound_GetMasterBusID();


/** Gets sound's bus ID
 * @param[in]   _pstSound     Concerned sound
 * @return      Sound's bus ID
 */
extern orxDLLAPI orxSTRINGID orxFASTCALL      orxSound_GetBusID(const orxSOUND *_pstSound);


/** Sets sound's bus ID
 * @param[in]   _pstSound     Concerned sound
 * @param[in]   _stBusID      Bus ID to set
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxSound_SetBusID(orxSOUND *_pstSound, orxSTRINGID _stBusID);


/** Gets next sound in bus
 * @param[in]   _pstSound     Concerned sound, orxNULL to get the first one
 * @param[in]   _stBusID      Bus ID to consider, orxSTRINGID_UNDEFINED for all
 * @return      orxSOUND / orxNULL
 */
extern orxDLLAPI orxSOUND *orxFASTCALL        orxSound_GetNext(const orxSOUND *_pstSound, orxSTRINGID _stBusID);


/** Gets bus parent
 * @param[in]   _stBusID      Concerned bus ID
 * @return      Parent bus ID / orxSTRINGID_UNDEFINED
 */
extern orxDLLAPI orxSTRINGID orxFASTCALL      orxSound_GetBusParent(orxSTRINGID _stBusID);


/** Gets bus child
 * @param[in]   _stBusID      Concerned bus ID
 * @return      Child bus ID / orxSTRINGID_UNDEFINED
 */
extern orxDLLAPI orxSTRINGID orxFASTCALL      orxSound_GetBusChild(orxSTRINGID _stBusID);


/** Gets bus sibling
 * @param[in]   _stBusID      Concerned bus ID
 * @return      Sibling bus ID / orxSTRINGID_UNDEFINED
 */
extern orxDLLAPI orxSTRINGID orxFASTCALL      orxSound_GetBusSibling(orxSTRINGID _stBusID);


/** Sets a bus parent
 * @param[in]   _stBusID      Concerned bus ID, will create it if not already existing
 * @param[in]   _stParentBusID  ID of the bus to use as parent, will create it if not already existing
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxSound_SetBusParent(orxSTRINGID _stBusID, orxSTRINGID _stParentBusID);


/** Gets bus volume (local, ie. unaffected by the whole bus hierarchy)
 * @param[in]   _stBusID      Concerned bus ID
 * @return      orxFLOAT
 */
extern orxDLLAPI orxFLOAT orxFASTCALL         orxSound_GetBusVolume(orxSTRINGID _stBusID);


/** Gets bus pitch (local, ie. unaffected by the whole bus hierarchy)
 * @param[in]   _stBusID      Concerned bus ID
 * @return      orxFLOAT
 */
extern orxDLLAPI orxFLOAT orxFASTCALL         orxSound_GetBusPitch(orxSTRINGID _stBusID);


/** Sets bus volume
 * @param[in]   _stBusID      Concerned bus ID, will create it if not already existing
 * @param[in]   _fVolume      Desired volume (0.0 - 1.0)
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxSound_SetBusVolume(orxSTRINGID _stBusID, orxFLOAT _fVolume);


/** Sets bus pitch
 * @param[in]   _stBusID      Concerned bus ID, will create it if not already existing
 * @param[in]   _fPitch       Desired pitch
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxSound_SetBusPitch(orxSTRINGID _stBusID, orxFLOAT _fPitch);


/** Gets bus global volume, ie. taking into account the whole bus hierarchy
 * @param[in]   _stBusID      Concerned bus ID
 * @return      orxFLOAT
 */
extern orxDLLAPI orxFLOAT orxFASTCALL         orxSound_GetBusGlobalVolume(orxSTRINGID _stBusID);


/** Gets bus global pitch, ie. taking into account the whole bus hierarchy
 * @param[in]   _stBusID      Concerned bus ID
 * @return      orxFLOAT
 */
extern orxDLLAPI orxFLOAT orxFASTCALL         orxSound_GetBusGlobalPitch(orxSTRINGID _stBusID);