src/norx/sound.nim


proc isLooping*(pstSound: ptr orxSOUND): orxBOOL {.cdecl,
    importc: "orxSound_IsLooping", dynlib: libORX.}
  ## Is sound looping?
  ##  @param[in] _pstSound       Concerned Sound
  ##  @return orxTRUE / orxFALSE

proc getDuration*(pstSound: ptr orxSOUND): orxFLOAT {.cdecl,
    importc: "orxSound_GetDuration", dynlib: libORX.}
  ## Gets sound duration
  ##  @param[in] _pstSound       Concerned Sound
  ##  @return orxFLOAT

proc getStatus*(pstSound: ptr orxSOUND): orxSOUND_STATUS {.cdecl,
    importc: "orxSound_GetStatus", dynlib: libORX.}
  ## Gets sound status
  ##  @param[in] _pstSound       Concerned Sound
  ##  @return orxSOUND_STATUS

proc getName*(pstSound: ptr orxSOUND): cstring {.cdecl,
    importc: "orxSound_GetName", dynlib: libORX.}
  ## Gets sound config name
  ##  @param[in]   _pstSound     Concerned sound
  ##  @return      orxSTRING / orxSTRING_EMPTY

proc getMasterBusID*(): orxSTRINGID {.cdecl,
    importc: "orxSound_GetMasterBusID", dynlib: libORX.}
  ## Gets master bus ID
  ##  @return      Master bus ID

proc getBusID*(pstSound: ptr orxSOUND): orxSTRINGID {.cdecl,
    importc: "orxSound_GetBusID", dynlib: libORX.}
  ## Gets sound's bus ID
  ##  @param[in]   _pstSound     Concerned sound
  ##  @return      Sound's bus ID

proc setBusID*(pstSound: ptr orxSOUND; stBusID: orxSTRINGID): orxSTATUS {.
    cdecl, importc: "orxSound_SetBusID", dynlib: libORX.}
  ## Sets sound's bus ID
  ##  @param[in]   _pstSound     Concerned sound
  ##  @param[in]   _stBusID      Bus ID to set
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getNext*(pstSound: ptr orxSOUND; stBusID: orxSTRINGID): ptr orxSOUND {.
    cdecl, importc: "orxSound_GetNext", dynlib: libORX.}
  ## Gets next sound in bus
  ##  @param[in]   _pstSound     Concerned sound, nil to get the first one
  ##  @param[in]   _stBusID      Bus ID to consider, orxSTRINGID_UNDEFINED for all
  ##  @return      orxSOUND / nil

proc getBusParent*(stBusID: orxSTRINGID): orxSTRINGID {.cdecl,
    importc: "orxSound_GetBusParent", dynlib: libORX.}
  ## Gets bus parent
  ##  @param[in]   _stBusID      Concerned bus ID
  ##  @return      Parent bus ID / orxSTRINGID_UNDEFINED

proc getBusChild*(stBusID: orxSTRINGID): orxSTRINGID {.cdecl,
    importc: "orxSound_GetBusChild", dynlib: libORX.}
  ## Gets bus child
  ##  @param[in]   _stBusID      Concerned bus ID
  ##  @return      Child bus ID / orxSTRINGID_UNDEFINED

proc getBusSibling*(stBusID: orxSTRINGID): orxSTRINGID {.cdecl,
    importc: "orxSound_GetBusSibling", dynlib: libORX.}
  ## Gets bus sibling
  ##  @param[in]   _stBusID      Concerned bus ID
  ##  @return      Sibling bus ID / orxSTRINGID_UNDEFINED

proc setBusParent*(stBusID: orxSTRINGID; stParentBusID: orxSTRINGID): orxSTATUS {.
    cdecl, importc: "orxSound_SetBusParent", dynlib: libORX.}
  ## Sets a bus parent
  ##  @param[in]   _stBusID      Concerned bus ID, will create it if not already existing
  ##  @param[in]   _stParentBusID  ID of the bus to use as parent, will create it if not already existing
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getBusVolume*(stBusID: orxSTRINGID): orxFLOAT {.cdecl,
    importc: "orxSound_GetBusVolume", dynlib: libORX.}
  ## Gets bus volume (local, ie. unaffected by the whole bus hierarchy)
  ##  @param[in]   _stBusID      Concerned bus ID
  ##  @return      orxFLOAT

proc getBusPitch*(stBusID: orxSTRINGID): orxFLOAT {.cdecl,
    importc: "orxSound_GetBusPitch", dynlib: libORX.}
  ## Gets bus pitch (local, ie. unaffected by the whole bus hierarchy)
  ##  @param[in]   _stBusID      Concerned bus ID
  ##  @return      orxFLOAT

proc setBusVolume*(stBusID: orxSTRINGID; fVolume: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxSound_SetBusVolume", dynlib: libORX.}
  ## Sets bus volume
  ##  @param[in]   _stBusID      Concerned bus ID, will create it if not already existing
  ##  @param[in]   _fVolume      Desired volume (0.0 - 1.0)
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setBusPitch*(stBusID: orxSTRINGID; fPitch: orxFLOAT): orxSTATUS {.cdecl,
    importc: "orxSound_SetBusPitch", dynlib: libORX.}
  ## Sets bus pitch
  ##  @param[in]   _stBusID      Concerned bus ID, will create it if not already existing
  ##  @param[in]   _fPitch       Desired pitch
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getBusGlobalVolume*(stBusID: orxSTRINGID): orxFLOAT {.cdecl,
    importc: "orxSound_GetBusGlobalVolume", dynlib: libORX.}
  ## Gets bus global volume, ie. taking into account the whole bus hierarchy
  ##  @param[in]   _stBusID      Concerned bus ID
  ##  @return      orxFLOAT

proc getBusGlobalPitch*(stBusID: orxSTRINGID): orxFLOAT {.cdecl,
    importc: "orxSound_GetBusGlobalPitch", dynlib: libORX.}
  ## Gets bus global pitch, ie. taking into account the whole bus hierarchy
  ##  @param[in]   _stBusID      Concerned bus ID
  ##  @return      orxFLOAT

